fix: center other projects title on smaller screens

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -262,6 +262,11 @@
 		margin-bottom: 1.5rem;
 	}
 
+	.other-projects-section-title {
+		justify-content: center;
+		margin-bottom: 1.5rem;
+	}
+
 	.featured-project-container {
 		flex-direction: column;
 		align-items: center;
